--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
     </noscript>
     <div id="root"></div>
     <div id="subroot"></div>
+    <div id="subsubroot"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
