--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,7 @@
     <div id="root"></div>
     <div id="subroot"></div>
     <div id="subsubroot"></div>
+    <div id="email"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
